fixing html files

--- a/public/404.html
+++ b/public/404.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
-<html>
-<head
-  <title>The page you were looking for doesn't exist (404)</title>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Wishi - The Fashionista Club.</title>
+	<link rel="index.html.erb" href="404.html">
+</head>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
+  background: url('C:\Users\Adela\Desktop\kmy\thinkful\Wishi\images\fashion1') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  font-family: Georgia, serif;	
+  color: #000000;
+}
+h1 {
+	font-weight: 800;
+	font-size: 32px;
+	margin-bottom: 8px;
+  
   }
-
+h2 {
+	font-size: 24px;
+	margin-bottom: 12px;
   div.dialog {
     width: 95%;
     max-width: 33em;
